--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:staging": "NODE_ENV=staging node dist/main",
+    "start:prod": "NODE_ENV=production node dist/main",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "migration:generate": "yarn run typeorm migration:generate -n",
+    "migration:create": "yarn run typeorm migration:create -n",
+    "migration:run": "yarn run typeorm migration:run",
+    "migration:revert": "yarn run typeorm migration:revert",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -25,15 +31,21 @@
     "@nestjs/graphql": "^6.5.3",
     "@nestjs/platform-express": "^6.7.2",
     "@nestjs/typeorm": "^6.2.0",
+    "@types/graphql": "^14.5.0",
     "apollo-server-express": "^2.9.7",
+    "dataloader": "^1.4.0",
+    "dotenv-flow": "^3.1.0",
     "graphql": "^14.5.8",
     "graphql-tools": "^4.0.5",
+    "nestjs-config": "^1.4.4",
     "pg": "^7.12.1",
+    "process": "^0.11.10",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
     "type-graphql": "^0.17.5",
-    "typeorm": "^0.2.20"
+    "typeorm": "^0.2.20",
+    "voyager": "^0.4.13"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.9.0",
