--- a/package.json
+++ b/package.json
@@ -27,17 +27,26 @@
   },
   "dependencies": {
     "@nestjs/common": "^6.7.2",
-    "@nestjs/core": "^6.7.2",
+    "@nestjs/core": "^6.8.4",
     "@nestjs/graphql": "^6.5.3",
+    "@nestjs/jwt": "^6.1.1",
+    "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.7.2",
     "@nestjs/typeorm": "^6.2.0",
     "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^8.3.5",
+    "@types/passport-jwt": "^3.0.2",
+    "@types/passport-local": "^1.0.33",
     "apollo-server-express": "^2.9.7",
+    "crypto-js": "^3.1.9-1",
     "dataloader": "^1.4.0",
     "dotenv-flow": "^3.1.0",
     "graphql": "^14.5.8",
     "graphql-tools": "^4.0.5",
     "nestjs-config": "^1.4.4",
+    "node-gyp": "^6.0.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "pg": "^7.12.1",
     "process": "^0.11.10",
     "reflect-metadata": "^0.1.13",
