--- a/package.json
+++ b/package.json
@@ -38,11 +38,14 @@
     "@types/passport-jwt": "^3.0.2",
     "@types/passport-local": "^1.0.33",
     "apollo-server-express": "^2.9.7",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.10.2",
     "crypto-js": "^3.1.9-1",
     "dataloader": "^1.4.0",
     "dotenv-flow": "^3.1.0",
     "graphql": "^14.5.8",
     "graphql-tools": "^4.0.5",
+    "nestjs-admin": "^0.3.0",
     "nestjs-config": "^1.4.4",
     "node-gyp": "^6.0.0",
     "passport": "^0.4.0",
