feat() add variables

--- a/.env.default
+++ b/.env.default
@@ -1,7 +1,12 @@
+TYPEORM_CONNECTION =postgres
 TYPEORM_HOST=localhost
 TYPEORM_DATABASE=moodboard_db
 TYPEORM_USERNAME=commite
 TYPEORM_PASSWORD=commite
 TYPEORM_PORT=5432
 EXPRESS_PORT=3000
+TYPEORM_SYNCHRONIZE = true
+TYPEORM_LOGGING = true
 JWT_SECRET_KEY=mySuperSecretPassword!
+TYPEORM_MIGRATIONS=migrations/*.ts
+TYPEORM_MIGRATIONS_DIR=migrations
